EHNCP-2076 Migration Java 8 to 11 (OpenJDK)